--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,33 @@ frontend/build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+real-time-chat-frontend/node_modules/
+real-time-chat-frontend/node_modules
+
+.DS_STORE
+node_modules
+scripts/flow/*/.flowconfig
+*~
+*.pyc
+.grunt
+_SpecRunner.html
+__benchmarks__
+build/
+remote-repo/
+coverage/
+flow-coverage/
+.module-cache
+fixtures/dom/public/react-dom.js
+fixtures/dom/public/react.js
+test/the-files-to-test.generated.js
+*.log*
+chrome-user-data
+*.sublime-project
+*.sublime-workspace
+.idea
+*.iml
+.vscode
+*.swp
+*.swo
+
